kubernetes/coturn.yaml
## Your HS configuration entry for turn uris should look like;
#
# turn_uris: [ 'turn:turn.example.com:3487?transport=udp' ]
#
# Kubernetes currently doesn't support both TCP and UDP, so if you want both
# you need to spin up a second LoadBalancer service for that, which can be
# costly depending on your host
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: coturn
  name: coturn
  namespace: matrix
spec:
  externalTrafficPolicy: Cluster
  ports:
  # You can't currently have both UDP and TCP in the same LoadBalancer on K8s
  - name: udp-port
    port: 3487
    protocol: UDP
    targetPort: 3487
  selector:
    app: coturn
  type: LoadBalancer
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: coturn
  name: coturn
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
      - env:
        - name: INTERNAL_IP
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: status.hostIP
        - name: EXTERNAL_IP
          value: 1.2.3.4  # XXX: Replace this with your service IP
        - name: AUTH_SECRET
          valueFrom:
            secretKeyRef:
              key: auth-secret
              name: coturn-secret
        - name: PORT
          value: "3487"
        - name: REALM
          value: turn.example.com # Use the same realm as the hostname in the turn_uri
        image: ananace/coturn:4.5.0.6-r3
        name: coturn
        readinessProbe:
          tcpSocket:
            port: 9090
        volumeMounts:
        - mountPath: /etc/coturn/turnserver.conf
          name: coturn-config
          subPath: turnserver.conf
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          name: coturn-config
        name: coturn-config
