kubernetes/federation-reader.yaml
# Example ingress rules are in the ingress.yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: federation-reader
  namespace: matrix
spec:
  ports:
  - name: http
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: matrix-synapse-worker
    worker: federation-reader
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: matrix-synapse-worker
    worker: federation-reader
  name: federation-reader
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matrix-synapse-worker
      worker: federation-reader
  template:
    metadata:
      annotations:
        prometheus.io/path: /_synapse/metrics
        prometheus.io/port: "9090"
        prometheus.io/scrape: "true"
      labels:
        app: matrix-synapse-worker
        worker: federation-reader
    spec:
      # Avoid co-locating workers with the main Synapse pod if possible
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - matrix-synapse
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - synapse.app.federation_reader
        - -c
        - /synapse/config/federation-reader.worker
        image: ananace/matrix-synapse:1.7.3
        imagePullPolicy: IfNotPresent
        name: worker
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /synapse/tls
          name: matrix-synapse-tls
        - mountPath: /synapse/keys
          name: matrix-synapse-tls-dh
        - mountPath: /synapse/config
          name: matrix-synapse-config
      restartPolicy: Always
      securityContext:
        fsGroup: 666
        runAsGroup: 666
        runAsUser: 666
      volumes:
      - name: matrix-synapse-tls
        secret:
          secretName: matrix-synapse-tls
      - name: matrix-synapse-tls-dh
        secret:
          secretName: matrix-synapse-tls-dh
      - configMap:
          name: matrix-synapse
        name: matrix-synapse-config
