kubernetes/ma1sd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ma1sd
  name: ma1sd
  namespace: matrix
spec:
  ports:
  - name: ma1sd
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: ma1sd
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ma1sd
  name: ma1sd
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ma1sd
  template:
    metadata:
      labels:
        app: ma1sd
    spec:
      containers:
      - image: ma1uta/ma1sd:2.2.2
        imagePullPolicy: IfNotPresent
        name: ma1sd
        readinessProbe:
          tcpSocket:
            port: 8090
        volumeMounts:
        - mountPath: /var/lib/ma1sd
          name: ma1sd-data
        - mountPath: /etc/ma1sd/signing.key
          name: matrix-synapse-keys
          subPath: signing.key
        - mountPath: /etc/ma1sd/ma1sd.yaml
          name: ma1sd-config
          subPath: ma1sd.yaml
      restartPolicy: Always
      volumes:
      - name: ma1sd-data
        persistentVolumeClaim:
          claimName: ma1sd-data
      - name: ma1sd-keys
        secret:
          secretName: ma1sd-keys
      - configMap:
          name: ma1sd-config
        name: ma1sd-config
