kubernetes/mxisd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mxisd
  name: mxisd
  namespace: matrix
spec:
  ports:
  - name: mxisd
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: mxisd
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mxisd
  name: mxisd
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: mxisd
  template:
    metadata:
      labels:
        app: mxisd
    spec:
      containers:
      - image: kamax/mxisd:latest
        imagePullPolicy: Always
        name: mxisd
        readinessProbe:
          tcpSocket:
            port: 8090
        volumeMounts:
        - mountPath: /var/mxisd
          name: mxisd-data
        - mountPath: /etc/mxisd/mxisd.yaml
          name: mxisd-config
          subPath: mxisd.yaml
        - mountPath: /etc/mxisd/signing.key
          name: matrix-synapse-keys
          subPath: signing.key
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
      - name: mxisd-data
        emptyDir: {} # Set a PVC here to keep data
      - name: matrix-synapse-keys
        secret:
          defaultMode: 420
          secretName: matrix-synapse-keys
      - configMap:
          defaultMode: 420
          name: mxisd-config
        name: mxisd-config
