kubernetes/riot.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: riot
  name: riot
  namespace: matrix
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: riot
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: riot
  name: riot
  namespace: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riot
  template:
    metadata:
      labels:
        app: riot
    spec:
      containers:
      - image: vectorim/riot-web:v1.5.6
        imagePullPolicy: IfNotExists
        name: riot-web
        readinessProbe:
          tcpSocket:
            port: 80
        volumeMounts:
        - mountPath: /app/config.json
          name: riot-config
          subPath: config.json
      restartPolicy: Always
      volumes:
      - configMap:
          name: riot-config
        name: riot-config
