kubernetes/synapse.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: matrix-synapse-replication
spec:
  ports:
    - name: replication
      protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: matrix-synapse
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: matrix-synapse
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: https
      protocol: TCP
      port: 8448
      targetPort: 8448
    - name: replication
      protocol: TCP
      port: 9092
      targetPort: 9092
  selector:
    app: matrix-synapse
  type: ClusterIP
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: matrix-synapse
  labels:
    app: matrix-synapse
spec:
  selector:
    matchLabels:
      app: matrix-synapse
  template:
    metadata:
      labels:
        app: matrix-synapse
    spec:
      volumes:
        - name: matrix-synapse-data
          emptyDir: {}
        - name: matrix-synapse-tls
          secret:
            secretName: matrix-synapse-tls
        - name: matrix-synapse-keys
          secret:
            secretName: matrix-synapse-keys
        - name: matrix-synapse-config
          configMap:
            name: matrix-synapse-config
      containers:
        - name: matrix-synapse
          image: ananace/matrix-synapse:0.28.0
          volumeMounts:
            - name: matrix-synapse-data
              mountPath: /synapse/data
            - name: matrix-synapse-config
              mountPath: /synapse/config
            - name: matrix-synapse-keys
              mountPath: /synapse/keys
            - name: matrix-synapse-tls
              mountPath: /synapse/tls
          resources:
            request:
              memory: 250Mi
              cpu: 250m
            limits:
              memory: 4Gi
              cpu: 1
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /_matrix/client/versions
              port: 8008
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
