kubernetes/worker.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: synchrotron
  namespace: matrix
spec:
  ports:
  - name: http
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: matrix-synapse-worker
    worker: synchrotron
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix-synapse-worker
    worker: federation-sender
  name: federation-sender
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: matrix-synapse-worker
      worker: federation-sender
  template:
    metadata:
      labels:
        app: matrix-synapse-worker
        worker: federation-sender
    spec:
      # Avoid co-locating workers with the main Synapse pod if possible
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - matrix-synapse
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - synapse.app.federation_sender
        - -c
        - /synapse/config/federation-sender.worker
        image: ananace/matrix-synapse:1.7.3
        imagePullPolicy: IfNotPresent
        name: worker
        resources:
          limits:
            memory: 512Mi
        volumeMounts:
        - mountPath: /synapse/keys
          name: matrix-synapse-keys
        - mountPath: /synapse/config
          name: matrix-synapse-config
      restartPolicy: Always
      volumes:
      - name: matrix-synapse-keys
        secret:
          secretName: matrix-synapse-keys
      - configMap:
          name: matrix-synapse
        name: matrix-synapse-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrix-synapse-worker
    worker: synchrotron
  name: synchrotron
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: matrix-synapse-worker
      worker: synchrotron
  template:
    metadata:
      labels:
        app: matrix-synapse-worker
        worker: synchrotron
    spec:
      # Avoid co-locating workers with the main Synapse pod if possible
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - matrix-synapse
            topologyKey: kubernetes.io/hostname
      containers:
      - args:
        - synapse.app.synchrotron
        - -c
        - /synapse/config/synchrotron.worker
        image: ananace/matrix-synapse:1.7.3
        imagePullPolicy: IfNotPresent
        name: worker
        resources:
          limits:
            memory: 256Mi
        volumeMounts:
        - mountPath: /synapse/keys
          name: matrix-synapse-keys
        - mountPath: /synapse/config
          name: matrix-synapse-config
      volumes:
      - name: matrix-synapse-keys
        secret:
          secretName: matrix-synapse-keys
      - configMap:
          name: matrix-synapse
        name: matrix-synapse-config
